# FormulaStudentQT

./: .gitignore  README.md  dataa.txt  dataol.txt
FormulaStudent/: CMakeLists.txt  candata.cpp  candata.h  databaseManager.cpp  databaseManager.h  homePage.cpp  homePage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapPage.cpp  mapPage.cpp.autosave  mapPage.h  mapPage.h.autosave  progressDialog.cpp  progressDialog.h  progressdialog.ui  resources.qrc  settingsPage.cpp  settingsPage.h  telemetryPage.cpp  telemetryPage.h
FormulaStudent/API/: googlemaps.html
FormulaStudent/Database/: database.db
FormulaStudent/Processing/CANData/: CMakeLists.txt  candata.cpp  candata.h
FormulaStudent/Utilities/GeoDistance/: CMakeLists.txt  geodistance.cpp  geodistance.h
FormulaStudent/Utilities/NumberUtils/: CMakeLists.txt  numberutils.cpp  numberutils.h
FormulaStudent/Utilities/temperature/: CMakeLists.txt  temperature.cpp  temperature.h
